kubernetes/django-celery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-deployment
spec:
  selector:
    matchLabels:
      app: django-celery
  replicas: 1
  template:
    metadata:
      labels:
        app: django-celery
    spec:
      containers:
      - name: django-celery
        image: justezy0210/django-celery:1.0.1
        imagePullPolicy: Always
        command: ["celery", "-A", "proj", "worker", "-l", "info"]

      restartPolicy: Always
