kubernetes/django-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
spec:
  selector:
    matchLabels:
      app: django-app
  replicas: 1
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
      - name: django-app
        image: justezy0210/django-celery:1.0.1
        imagePullPolicy: Always
        command: ["gunicorn", "--bind", "0:8000", "--workers", "5", "proj.wsgi"]

        ports:
        - containerPort: 8000
      restartPolicy: Always


---

apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  type: NodePort
  selector:
    app: django-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30010
